--- a/src/styles/notes.scss
+++ b/src/styles/notes.scss
@@ -2,8 +2,8 @@
     width: 100%;
     background-color: #e3e3e3;
     padding: 10px;
+    box-sizing: border-box;
     &__text {
         margin: 0;
-        font-family: 'Roboto Condensed', sans-serif;
     }
 }
