add react router

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,16 @@
-.App {
+.app {
+    max-width: 1000px;
+    margin: 0 auto;
     font-family: 'Roboto Condensed', sans-serif;
+    &__nav {
+        margin-bottom: 20px;
+    }
+    &__nav-link {
+        display: block;
+        padding: 8px 16px;
+    }
+    &__nav-link:hover {
+        color: #0056b3;
+        text-decoration: none;
+    }
 }
