--- a/src/styles/postList.scss
+++ b/src/styles/postList.scss
@@ -6,7 +6,8 @@
     justify-content: center;
     list-style: none;
     &__link {
-        width: 25%;
+        width: 23%;
+        margin: 0 1%;
         text-decoration: none;
     }
     &__item {
